--- a/quiz-app/bin/application/QuizApp.fxml
+++ b/quiz-app/bin/application/QuizApp.fxml
@@ -8,44 +8,30 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0"
-	prefWidth="650.0" xmlns="http://javafx.com/javafx/11.0.1"
-	xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.QuizAppController">
-	<children>
-		<VBox layoutX="14.0" layoutY="14.0" maxHeight="-Infinity"
-			maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-			prefHeight="530.0" prefWidth="375.0" />
-	</children>
-	<top>
-		<VBox maxHeight="-Infinity" maxWidth="-Infinity"
-			minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0"
-			prefWidth="650.0" BorderPane.alignment="CENTER">
-			<children>
-				<TextArea prefHeight="324.0" prefWidth="650.0" />
-				<Pane prefHeight="199.0" prefWidth="650.0">
-					<children>
-						<RadioButton layoutX="14.0" layoutY="14.0"
-							mnemonicParsing="false" text="RadioButton" />
-						<RadioButton layoutX="14.0" layoutY="42.0"
-							mnemonicParsing="false" text="RadioButton" />
-						<RadioButton layoutX="14.0" layoutY="72.0"
-							mnemonicParsing="false" text="RadioButton" />
-						<RadioButton layoutX="14.0" layoutY="100.0"
-							mnemonicParsing="false" text="RadioButton" />
-					</children>
-				</Pane>
-				<HBox prefHeight="42.0" prefWidth="650.0">
-					<children>
-						<Button mnemonicParsing="false" prefHeight="42.0"
-							prefWidth="217.0" text="Button" />
-						<Button mnemonicParsing="false" prefHeight="42.0"
-							prefWidth="226.0" text="Button" />
-						<Button mnemonicParsing="false" prefHeight="48.0"
-							prefWidth="213.0" text="Button" />
-					</children>
-				</HBox>
-			</children>
-		</VBox>
-	</top>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.QuizAppController">
+   <children>
+      <VBox layoutX="14.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="375.0" />
+   </children>
+   <top>
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="650.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextArea maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="650.0" />
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="650.0">
+               <children>
+                  <RadioButton layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="RadioButton" />
+                  <RadioButton layoutX="14.0" layoutY="42.0" mnemonicParsing="false" text="RadioButton" />
+                  <RadioButton layoutX="14.0" layoutY="72.0" mnemonicParsing="false" text="RadioButton" />
+                  <RadioButton layoutX="14.0" layoutY="100.0" mnemonicParsing="false" text="RadioButton" />
+               </children>
+            </Pane>
+            <HBox prefHeight="42.0" prefWidth="650.0">
+               <children>
+                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="217.0" text="Button" />
+                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="217.0" text="Button" />
+                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="216.0" text="Button" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </top>
 </BorderPane>
