--- a/quiz-app/src/application/QuizApp.fxml
+++ b/quiz-app/src/application/QuizApp.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
@@ -8,30 +9,68 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.QuizAppController">
-   <children>
-      <VBox layoutX="14.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="375.0" />
-   </children>
-   <top>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="650.0" BorderPane.alignment="CENTER">
-         <children>
-            <TextArea maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="650.0" />
-            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="650.0">
-               <children>
-                  <RadioButton layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="RadioButton" />
-                  <RadioButton layoutX="14.0" layoutY="42.0" mnemonicParsing="false" text="RadioButton" />
-                  <RadioButton layoutX="14.0" layoutY="72.0" mnemonicParsing="false" text="RadioButton" />
-                  <RadioButton layoutX="14.0" layoutY="100.0" mnemonicParsing="false" text="RadioButton" />
-               </children>
-            </Pane>
-            <HBox prefHeight="42.0" prefWidth="650.0">
-               <children>
-                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="217.0" text="Button" />
-                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="217.0" text="Button" />
-                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="216.0" text="Button" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </top>
+<BorderPane maxHeight="442.0" maxWidth="650.0"
+	minHeight="442.0" minWidth="650.0" prefHeight="442.0" prefWidth="650.0"
+	xmlns="http://javafx.com/javafx/11.0.1"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="application.QuizAppController">
+	<children>
+		<VBox layoutX="14.0" layoutY="14.0" maxHeight="530.0"
+			maxWidth="375.0" minHeight="530.0" minWidth="375.0"
+			prefHeight="530.0" prefWidth="375.0" />
+	</children>
+	<top>
+		<VBox maxHeight="-Infinity" maxWidth="-Infinity"
+			minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0"
+			prefWidth="650.0" BorderPane.alignment="CENTER">
+			<children>
+				<TextArea fx:id="questionArea" editable="false"
+					wrapText="true" maxHeight="-Infinity" maxWidth="-Infinity"
+					minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0"
+					prefWidth="650.0" />
+				<Pane maxHeight="-Infinity" maxWidth="-Infinity"
+					minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0"
+					prefWidth="650.0">
+					<children>
+						<RadioButton fx:id="optionA" layoutX="14.0"
+							layoutY="14.0" mnemonicParsing="false" text="RadioButton" />
+						<RadioButton fx:id="optionB" layoutX="14.0"
+							layoutY="42.0" mnemonicParsing="false" text="RadioButton" />
+						<RadioButton fx:id="optionC" layoutX="14.0"
+							layoutY="72.0" mnemonicParsing="false" text="RadioButton" />
+						<RadioButton fx:id="optionD" layoutX="14.0"
+							layoutY="100.0" mnemonicParsing="false" text="RadioButton" />
+					</children>
+				</Pane>
+				<HBox prefHeight="42.0" prefWidth="650.0">
+					<children>
+						<Button fx:id="submitButton" defaultButton="true"
+							maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+							minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0"
+							prefWidth="214.0" text="Submit">
+							<HBox.margin>
+								<Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+							</HBox.margin>
+						</Button>
+						<Button fx:id="previousButton" maxHeight="-Infinity"
+							maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+							mnemonicParsing="false" prefHeight="27.0" prefWidth="214.0"
+							text="Previous">
+							<HBox.margin>
+								<Insets bottom="2.0" right="2.0" top="2.0" />
+							</HBox.margin>
+						</Button>
+						<Button fx:id="nextButton" maxHeight="-Infinity"
+							maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+							mnemonicParsing="false" prefHeight="27.0" prefWidth="214.0"
+							text="Next">
+							<HBox.margin>
+								<Insets bottom="2.0" right="2.0" top="2.0" />
+							</HBox.margin>
+						</Button>
+					</children>
+				</HBox>
+			</children>
+		</VBox>
+	</top>
 </BorderPane>
