--- a/quiz-app/bin/application/QuizApp.fxml
+++ b/quiz-app/bin/application/QuizApp.fxml
@@ -31,7 +31,7 @@
 				</Pane>
 				<HBox prefHeight="42.0" prefWidth="650.0">
 					<children>
-						<Button fx:id="submitButton" defaultButton="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="214.0" text="Submit">
+						<Button fx:id="submitButton" defaultButton="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#submit" prefHeight="27.0" prefWidth="214.0" text="Submit">
 							<HBox.margin>
 								<Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
 							</HBox.margin>
